Iteration 2: Tablulate the data
This iteration was about putting parts all the data into a table. This makes it look much better, and and also makes it much easier to read.

--- a/Source Files/index.html
+++ b/Source Files/index.html
@@ -7,6 +7,7 @@
   <!-- src files -->
   <script src="src/SetExtensions.js"></script>
   <script src="src/View.js"></script>
+  <script src="src/dataTables.js"></script>
   <script src="src/Team.js"></script>
   <script src="src/Match.js"></script>
   <script src="src/Pool.js"></script>
@@ -63,6 +64,7 @@
     teamResultsDiv.id = 'teamResultsDiv'
     teamResultsDiv.className = "resultsDiv"
 
+    
     //div for all results table
     var resultsDiv = document.createElement('div')
     resultsDiv.id = 'resultsDiv'
